--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0.1"
 
 accounts:
-  message: "Welcome to Eazy bank accouts related local apis"
+  message: "Welcome to Eazy bank accouts related prod apis"
   contactDetails:
     name : "John Deo - Developer"
     email : "john@eazybank.com"
